[gd_scene load_steps=6 format=2]

[ext_resource path="res://homebutton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Home.gd" type="Script" id=2]
[ext_resource path="res://tres_files/settings_font.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_right = 4

[node name="Control" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 124.0
margin_top = 97.0
margin_right = 576.0
margin_bottom = 802.0
custom_constants/separation = 200

[node name="Label" type="Label" parent="VBoxContainer"]
modulate = Color( 1, 0.968627, 0, 1 )
margin_right = 452.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "memory Game
memorize the sequence"
align = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 295.0
margin_right = 452.0
margin_bottom = 459.0
custom_constants/margin_right = 70
custom_constants/margin_left = 70

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 70.0
margin_right = 382.0
margin_bottom = 164.0

[node name="play_button" parent="VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 312.0
margin_bottom = 52.0
rect_scale = Vector2( 1, 1 )
text = "PLAY"

[node name="settings_button" parent="VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 56.0
margin_right = 312.0
margin_bottom = 108.0
rect_scale = Vector2( 1, 1 )
text = "SETTINGS"

[node name="exit_button" parent="VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 112.0
margin_right = 312.0
margin_bottom = 164.0
rect_scale = Vector2( 1, 1 )
text = "EXIT"

[node name="high_score" type="Label" parent="VBoxContainer"]
margin_top = 659.0
margin_right = 452.0
margin_bottom = 705.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
uppercase = true

[node name="ConfirmationDialog" type="WindowDialog" parent="."]
margin_left = 100.0
margin_top = 300.0
margin_right = 600.0
margin_bottom = 600.0
rect_min_size = Vector2( 500, 300 )
custom_colors/title_color = Color( 1, 0, 0, 1 )
custom_styles/panel = SubResource( 2 )
window_title = "EXIT?"

[node name="ColorRect" type="ColorRect" parent="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.192157, 0.278431, 0.576471, 1 )

[node name="CenterContainer" type="CenterContainer" parent="ConfirmationDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationDialog/CenterContainer"]
margin_left = 102.0
margin_top = 77.0
margin_right = 398.0
margin_bottom = 222.0

[node name="Label2" type="Label" parent="ConfirmationDialog/CenterContainer/VBoxContainer"]
margin_right = 296.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "Are you sure you 
want to exit?"

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationDialog/CenterContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 296.0
margin_bottom = 145.0

[node name="No_button" parent="ConfirmationDialog/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
modulate = Color( 0.211765, 1, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 48.0
margin_top = 0.0
margin_right = 97.0
margin_bottom = 46.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 6
custom_styles/normal = SubResource( 1 )
text = "No"

[node name="Yes_button" parent="ConfirmationDialog/CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 189.0
margin_top = 0.0
margin_right = 257.0
margin_bottom = 46.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 6
custom_styles/normal = SubResource( 1 )
text = "Yes"

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ConfirmationDialog/CenterContainer/VBoxContainer/HBoxContainer/No_button" to="." method="_on_Exit_No_button_pressed"]
[connection signal="pressed" from="ConfirmationDialog/CenterContainer/VBoxContainer/HBoxContainer/Yes_button" to="." method="_on_Exit_Yes_button_pressed"]
